<resources>
    <string name="app_name">CanBusDemo</string>
    <string name="show_name">Receive Canbus Data</string>
    <string name="all_recv_count">AllReceiveCount:</string>
    <string name="error_count">ErrorCount:</string>
    <string name="save_recv">Save Receive</string>
    <string name="send_times">Send Times :</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="init_num_id">00000000</string>
    <string name="init_num_0">0</string>
    <string name="init_num_1">1</string>
    <string name="init_num_2">2</string>
    <string name="init_num_10000">10000</string>
    <string name="init_num_data">00 01 02 03 04 05 06 07</string>
    <string name="list_not_zero">The number of list items is not 0. If you need to change to another mode, you need to clear the list items!</string>
    <string name="sendTimes">SendTimes</string>
    <string name="delay">delay</string>
    <string name="ms">ms</string>
    <string name="send_one">Send one</string>
    <string name="send">Send</string>
    <string name="type">Type</string>
    <string name="format">Format</string>
    <string name="frames">Frames</string>
    <string name="inc_frames_id">Increase Frames ID</string>
    <string name="ota">OTA</string>
    <string name="id_hex">ID(HEX): </string>
    <string name="data_hex">Data(HEX): </string>
    <string name="send_interval">Send Interval(ms):</string>
    <string name="stop">Stop</string>
    <string name="channel">Channel : </string>
    <string name="mode">Mode :</string>
    <string name="add">Add</string>
    <string name="id_range">ID Range : 0x</string>
    <string name="range">  ~  0x</string>
    <string name="list_mode">List Mode</string>
    <string name="mask_mode">Mask Mode</string>
    <string name="enable_filter">Enable Filter</string>
    <string name="ok">Ok</string>
    <string name="start_id">Start ID</string>
    <string name="end_id">End ID</string>
    <string name="filter_table">Filter Table</string>
    <string name="select">Select</string>
    <string name="current_ver">Current version : </string>
    <string name="start">Start</string>
    <string name="warn_open_log_fail">Open Log Failed !!!!</string>
    <string name="warn_open_first">You must open interface first !!!</string>
    <string name="warn_frames_less_than_1">Frames do not less than 1 !</string>
    <string name="warn_send_interval_set_null">Send interval do not set null !</string>
    <string name="warn_send_frames_less_than_1">Send frame do not less than 1 !</string>
    <string name="warn_no_filter">There are no filter rules in the list</string>
    <string name="warn_out_of_limit_filter_num">More than 28 ID filters</string>
    <string name="warn_standard_id_value_out_of_limit">Id value greater than 7FF !!!</string>
    <string name="warn_the_same_filter_id">The same filtering rules already exist in the list !!!</string>
    <string name="warn_standard_start_id_value_out_of_limit">Start id value greater than 7FF !!!</string>
    <string name="warn_standard_end_id_value_out_of_limit">End id value greater than 7FF !!!</string>
    <string name="warn_end_is_more_than_end_id_value">End id value is greater than or equal to end id value !!!</string>
    <string name="warn_extend_id_value_out_of_limit">Id value greater than 1FFFFFFF !!!</string>
    <string name="warn_extend_start_id_value_out_of_limit">Start id value greater than 1FFFFFFF !!!</string>
    <string name="warn_extend_end_id_value_out_of_limit">End id value greater than 1FFFFFFF !!!</string>
    <string name="warn_can0_set_standard_filter_fail">Can0 set id filter failed : </string>
    <string name="warn_can0_set_standard_filter_success">Can0 set id filter success !!!</string>
    <string name="warn_can0_set_extend_filter_fail">Can0 set mask id filter failed : </string>
    <string name="warn_can0_set_extend_filter_success">Can0 set mask id filter success !!!</string>
    <string name="warn_can1_set_standard_filter_fail">Can1 set id filter failed : </string>
    <string name="warn_can1_set_standard_filter_success">Can1 set id filter success !!!</string>
    <string name="warn_can1_set_extend_filter_fail">Can1 set mask id filter failed : </string>
    <string name="warn_can1_set_extend_filter_success">Can1 set mask id filter success !!!</string>
    <string name="warn_open_faile">Open failed !!!</string>
    <string name="warn_can0_close_if_filter_fail">Can0 close id filter failed : </string>
    <string name="warn_can0_close_if_filter_success">Can0 close id filter success !!!</string>
    <string name="warn_can1_close_if_filter_fail">Can1 close id filter failed : </string>
    <string name="warn_can1_close_if_filter_success">Can1 close id filter success !!!</string>
    <string name="warn_id_length_illegal">Frame ID length is Illegal !</string>
    <string name="warn_id_contains_illegal_char">Frame ID contains illegal characters !</string>
    <string name="warn_id_size_exceeds">Frame ID size exceeds the specified range !</string>
    <string name="warn_data_len_unreasonable">Frame DATA length is unreasonable !</string>
    <string name="warn_data_contains_illegal_char">Frame DATA contains illegal characters !</string>
    <string name="warn_send_fail">Send fail, please checkout interface !</string>
    <string name="warn_illegal_bin_file">Illegal bin file !!!</string>
    <string name="show_successs">SUCCEED</string>
    <string name="show_fail">FAILED</string>
    <string name="show_fail_msg">FAILED(Illegal bin file)</string>
    <string name="rule_ota_bin_file_name_contain">ST_firmware_ota</string>
    <string name="rule_rule_ota_bin_file_name_tail">.bin</string>
    <string name="rule_file">"file"</string>
    <string name="state">State</string>
    <string name="id">Id</string>
    <string name="dlc">DLC</string>
    <string name="data">Data</string>
    <string name="menu_table">Info and Menu</string>
    <string name="menu_save">Save</string>
    <string name="menu_enable">Enable Log Receive Data</string>
    <string name="canbus_data">CanBusData</string>
    <string name="menu_version">Demo Version : </string>
    <string name="lib_version">Library Version : </string>
    <string name="adc_collect_channel">ADC Collect Channel: </string>
    <string name="adc_v_ref">Vref: </string>
    <string name="init_num_3_3">3.3</string>
    <string name="adc_v"> V</string>
    <string name="adc_value">ADC Value: </string>
    <string name="adc_collect">Collect</string>
    <string name="rtc_mcu">MCU RTC: </string>
    <string name="rtc_set">Set</string>
    <string name="rtc_init_time">2023-06-20 00:00:00</string>
    <string name="show_data">Show Receive Data</string>
    <string name="func">FUNCTIONS</string>
    <string name="function">Functions</string>
    <string name="warn_v_ref">Reference voltage cannot be equal to or less than 0</string>

</resources>
