<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/filter_table"
        android:textColor="@color/colorRed"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/channel"
                android:textSize="14sp" />
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/format"
                android:textSize="14sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_id"
                android:textSize="14sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end_id"
                android:textSize="14sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />
        <ListView
            android:id="@+id/filter_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/channel"/>
            <Spinner
                android:id="@+id/filter_channel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/mode"/>
            <Spinner
                android:id="@+id/filter_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/filter_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/add"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/id_display"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/id_range"/>

            <EditText
                android:id="@+id/filter_start"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:maxLength="8"
                android:text="@string/init_num_0"
                android:textSize="10sp" />
            <TextView
                android:id="@+id/set_display_double"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/range"/>

            <EditText
                android:id="@+id/filter_end"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:maxLength="8"
                android:text="@string/init_num_0"
                android:textSize="10sp" />
            <RadioButton
                android:id="@+id/filter_list_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/list_mode" />
            <RadioButton
                android:id="@+id/filter_mask_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/mask_mode" />
            <CheckBox
                android:id="@+id/filter_enable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:checked="false"
                android:text="@string/enable_filter" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/filter_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
